--- a/TestSpring/src/main/resources/application.properties
+++ b/TestSpring/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/
+spring.datasource.url=jdbc:mysql://localhost:3306/crm_test
 spring.datasource.username=root
-spring.datasource.password=
+spring.datasource.password=Baam250602
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=validate
 spring.jpa.show-sql=true
