--- a/TestSpring/.gitignore
+++ b/TestSpring/.gitignore
@@ -31,6 +31,5 @@ build/
 
 ### VS Code ###
 .vscode/
-/src/main/resources/
-/src/main/resources/
+/src/main/resources/application-patrick.properties
 /src/main/resources/
