--- a/TestSpring/pom.xml
+++ b/TestSpring/pom.xml
@@ -39,7 +39,11 @@
 			<artifactId>mysql-connector-java</artifactId>
 			<version>8.0.25</version>
 		</dependency>
-	</dependencies>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-test</artifactId>
+        </dependency>
+    </dependencies>
 
 	<build>
 		<plugins>
