--- a/TestSpring/.gitignore
+++ b/TestSpring/.gitignore
@@ -31,5 +31,6 @@ build/
 
 ### VS Code ###
 .vscode/
-/src/main/resources/application-patrick.properties
+
 /src/main/resources/
+/src/test/resources/
